src/yini_test/cases/golden/strict/valid/lists/list-of-lists.strict.yini
@yini strict

^ Lists
matrix = [[1, 2], [3, 4]]

/END

