src/yini_test/cases/golden/strict/invalid/lists/list-opening-on-next-line.strict.yini
@yini strict

^ Lists
items =
[1, 2, 3]

/END

